Remove consul dependency from service discovery